--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Add accept parser to fastify",
   "main": "index.js",
   "devDependencies": {
+    "coveralls": "^2.13.1",
     "fastify": "^0.25.1",
     "pre-commit": "^1.2.2",
     "request": "^2.81.0",
@@ -19,7 +20,11 @@
     "fastify-plugin": "^0.1.0"
   },
   "scripts": {
-    "test": "standard | snazzy && tap test.js"
+    "lint": "standard | snazzy",
+    "unit": "tap test.js",
+    "test": "npm run lint && npm run unit",
+    "coverage": "tap test.js --cov --coverage-report=text-lcov --coverage-report=html",
+    "coveralls": "npm run coverage | coveralls"
   },
   "repository": {
     "type": "git",
