--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "coveralls": "^3.0.0",
     "fastify": "^1.8.0",
     "pre-commit": "^1.2.2",
-    "request": "2.88.0",
+    "request": "^2.88.0",
     "snazzy": "^8.0.0",
-    "standard": "^11.0.0",
+    "standard": "^12.0.1",
     "tap": "^12.0.0"
   },
   "engines": {
