--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "request": "^2.88.0",
     "snazzy": "^8.0.0",
     "standard": "^12.0.1",
-    "tap": "^12.0.0"
+    "tap": "^12.6.5"
   },
   "engines": {
     "node": ">=4.5"
@@ -35,5 +35,10 @@
   "bugs": {
     "url": "https://github.com/fastify/fastify-accepts/issues"
   },
-  "homepage": "https://github.com/fastify/fastify-accepts#readme"
+  "homepage": "https://github.com/fastify/fastify-accepts#readme",
+  "greenkeeper": {
+    "ignore": [
+      "tap"
+    ]
+  }
 }
