--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Add accept parser to fastify",
   "main": "index.js",
   "devDependencies": {
+    "@types/accepts": "^1.3.5",
+    "@types/node": "^13.1.8",
     "coveralls": "^3.0.0",
     "fastify": "^2.0.0",
     "pre-commit": "^1.2.2",
     "request": "^2.88.0",
     "snazzy": "^8.0.0",
     "standard": "^14.0.2",
-    "tap": "^12.6.5"
+    "tap": "^12.6.5",
+    "typescript": "^3.7.5"
   },
   "engines": {
     "node": ">=4.5"
@@ -22,9 +25,10 @@
   "scripts": {
     "lint": "standard | snazzy",
     "unit": "tap test.js",
-    "test": "npm run lint && npm run unit",
+    "test": "npm run lint && npm run unit && npm run typescript",
     "coverage": "tap test.js --cov --coverage-report=text-lcov --coverage-report=html",
-    "coveralls": "tap test.js --cov --coverage-report=text-lcov | coveralls"
+    "coveralls": "tap test.js --cov --coverage-report=text-lcov | coveralls",
+    "typescript": "tsc --project ./tsconfig.json"
   },
   "repository": {
     "type": "git",
