--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/accepts": "^1.3.5",
     "@types/node": "^13.1.8",
     "coveralls": "^3.0.0",
-    "fastify": "^3.0.0-alpha.1",
+    "fastify": "^3.0.0-rc.1",
     "pre-commit": "^1.2.2",
     "request": "^2.88.0",
     "snazzy": "^8.0.0",
