--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "@types/accepts": "^1.3.5",
     "@types/node": "^13.1.8",
     "coveralls": "^3.0.0",
-    "fastify": "^2.0.0",
+    "fastify": "^3.0.0-rc.1",
     "pre-commit": "^1.2.2",
     "request": "^2.88.0",
     "snazzy": "^8.0.0",
     "standard": "^14.0.2",
     "tap": "^12.6.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "tsd": "^0.11.0"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=10"
   },
   "dependencies": {
     "accepts": "^1.3.5",
-    "fastify-plugin": "^1.2.0"
+    "fastify-plugin": "^2.0.0"
   },
   "scripts": {
     "lint": "standard | snazzy",
@@ -28,7 +29,7 @@
     "test": "npm run lint && npm run unit && npm run typescript",
     "coverage": "tap test.js --cov --coverage-report=text-lcov --coverage-report=html",
     "coveralls": "tap test.js --cov --coverage-report=text-lcov | coveralls",
-    "typescript": "tsc --project ./tsconfig.json"
+    "typescript": "tsd"
   },
   "repository": {
     "type": "git",
@@ -39,10 +40,5 @@
   "bugs": {
     "url": "https://github.com/fastify/fastify-accepts/issues"
   },
-  "homepage": "https://github.com/fastify/fastify-accepts#readme",
-  "greenkeeper": {
-    "ignore": [
-      "tap"
-    ]
-  }
+  "homepage": "https://github.com/fastify/fastify-accepts#readme"
 }
