--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "devDependencies": {
     "@types/accepts": "^1.3.5",
     "@types/node": "^13.1.8",
-    "coveralls": "^3.0.0",
     "fastify": "^3.0.0-rc.1",
     "pre-commit": "^1.2.2",
     "request": "^2.88.0",
@@ -25,10 +24,8 @@
   },
   "scripts": {
     "lint": "standard | snazzy",
-    "unit": "tap test.js",
+    "unit": "tap --100 test.js",
     "test": "npm run lint && npm run unit && npm run typescript",
-    "coverage": "tap test.js --cov --coverage-report=text-lcov --coverage-report=html",
-    "coveralls": "tap test.js --cov --coverage-report=text-lcov | coveralls",
     "typescript": "tsd"
   },
   "repository": {
