--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "scripts": {
     "lint": "standard | snazzy",
-    "unit": "tap --100 test.js",
     "test": "npm run lint && npm run unit && npm run typescript",
-    "typescript": "tsd"
+    "typescript": "tsd",
+    "unit": "tap --100 test.js"
   },
   "repository": {
     "type": "git",
