--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "scripts": {
     "lint": "standard | snazzy",
     "test": "npm run lint && npm run unit && npm run typescript",
+    "test:ci": "npm run lint && tap test.js --coverage-report=lcovonly && npm run typescript",
     "typescript": "tsd",
     "unit": "tap --100 test.js"
   },
