chore: update docs and ci (#68)
* chore(scripts): sort alphabetically ascending order

Sorted list should allow for quicker reference when looking at scripts

* ci(dependabot): auto update github actions

* docs(readme): add badges

* ci: ignore documentation updates

* ci: add parallel test coverage calculation

--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "scripts": {
     "lint": "standard | snazzy",
-    "unit": "tap --100 test.js",
     "test": "npm run lint && npm run unit && npm run typescript",
-    "typescript": "tsd"
+    "test:ci": "npm run lint && tap test.js --coverage-report=lcovonly && npm run typescript",
+    "typescript": "tsd",
+    "unit": "tap --100 test.js"
   },
   "repository": {
     "type": "git",
