--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Add accept parser to fastify",
   "main": "index.js",
   "devDependencies": {
+    "@fastify/pre-commit": "^2.0.2",
     "@types/accepts": "^1.3.5",
     "@types/node": "^18.0.0",
     "fastify": "^4.0.0-rc.2",
-    "pre-commit": "^1.2.2",
     "request": "^2.88.0",
     "snazzy": "^9.0.0",
     "standard": "^17.0.0",
