--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "npm run lint && npm run unit && npm run typescript",
     "test:ci": "npm run lint && tap test.js --coverage-report=lcovonly && npm run typescript",
     "typescript": "tsd",
-    "unit": "tap --100 test.js"
+    "unit": "tap"
   },
   "repository": {
     "type": "git",
