--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   },
   "scripts": {
     "lint": "standard | snazzy",
-    "test": "npm run lint && npm run unit && npm run typescript",
-    "test:ci": "npm run lint && tap test.js --coverage-report=lcovonly && npm run typescript",
-    "typescript": "tsd",
-    "unit": "tap"
+    "test": "npm run test:unit && npm run test:typescript",
+    "test:typescript": "tsd",
+    "test:unit": "tap"
   },
   "repository": {
     "type": "git",
@@ -38,5 +37,9 @@
   "homepage": "https://github.com/fastify/fastify-accepts#readme",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
