--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "4.2.0",
   "description": "Add accept parser to fastify",
   "main": "index.js",
+  "type": "commonjs",
   "types": "types/index.d.ts",
   "devDependencies": {
     "@fastify/pre-commit": "^2.0.2",
