--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
   "type": "commonjs",
   "types": "types/index.d.ts",
   "devDependencies": {
-    "@fastify/pre-commit": "^2.0.2",
-    "@types/node": "^20.1.0",
-    "fastify": "^4.0.0-rc.2",
+    "@fastify/pre-commit": "^2.1.0",
+    "@types/node": "^20.11.29",
+    "fastify": "^4.26.2",
     "request": "^2.88.0",
     "snazzy": "^9.0.0",
-    "standard": "^17.0.0",
-    "tap": "^16.0.0",
-    "tsd": "^0.30.0"
+    "standard": "^17.1.0",
+    "tap": "^18.7.1",
+    "tsd": "^0.30.7"
   },
   "dependencies": {
-    "accepts": "^1.3.5",
-    "fastify-plugin": "^4.0.0"
+    "accepts": "^1.3.8",
+    "fastify-plugin": "^4.5.1"
   },
   "scripts": {
     "lint": "standard | snazzy",
