--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastify/accepts",
-  "version": "5.0.0-pre.fv5.2",
+  "version": "5.0.0",
   "description": "Add accept parser to fastify",
   "main": "index.js",
   "type": "commonjs",
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
     "@types/node": "^22.0.0",
-    "fastify": "^5.0.0-alpha.3",
+    "fastify": "^5.0.0-alpha.4",
     "request": "^2.88.0",
     "snazzy": "^9.0.0",
     "standard": "^17.1.0",
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "accepts": "^1.3.8",
-    "fastify-plugin": "^5.0.0-pre.fv5.1"
+    "fastify-plugin": "^5.0.0"
   },
   "scripts": {
     "lint": "standard | snazzy",
