--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "devDependencies": {
     "@fastify/pre-commit": "^2.1.0",
     "@types/node": "^22.0.0",
-    "fastify": "^5.0.0-alpha.4",
+    "fastify": "^5.0.0",
     "request": "^2.88.0",
     "snazzy": "^9.0.0",
     "standard": "^17.1.0",
