build(deps-dev): replace standard with neostandard

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "@fastify/pre-commit": "^2.1.0",
     "@types/node": "^22.0.0",
     "fastify": "^5.0.0",
+    "neostandard": "^0.11.9",
     "request": "^2.88.0",
-    "snazzy": "^9.0.0",
-    "standard": "^17.1.0",
     "tap": "^20.0.1",
     "tsd": "^0.31.1"
   },
@@ -20,7 +19,8 @@
     "fastify-plugin": "^5.0.0"
   },
   "scripts": {
-    "lint": "standard | snazzy",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "test": "npm run test:unit && npm run test:typescript",
     "test:typescript": "tsd",
     "test:unit": "tap"
