chore(package): update contributors
Signed-off-by: Frazer Smith <frazer.dev@icloud.com>

--- a/package.json
+++ b/package.json
@@ -32,6 +32,18 @@
   "author": "allevo",
   "contributors": [
     {
+      "name": "Matteo Collina",
+      "email": "hello@matteocollina.com"
+    },
+    {
+      "name": "Manuel Spigolon",
+      "email": "behemoth89@gmail.com"
+    },
+    {
+      "name": "James Sumners",
+      "url": "https://james.sumners.info"
+    },
+    {
       "name": "Frazer Smith",
       "email": "frazer.dev@icloud.com",
       "url": "https://github.com/fdawgs"
