--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "types": "types/index.d.ts",
   "devDependencies": {
+    "@types/accepts": "^1.3.7",
     "@types/node": "^24.0.8",
     "c8": "^10.1.3",
     "eslint": "^9.17.0",
